--- a/jupyter/capstone_project.ipynb
+++ b/jupyter/capstone_project.ipynb
@@ -3,40 +3,22 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "# Coursera Capstone Project"
+      "source": [
+        "# Coursera Capstone Project"
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "### by Malte Jörg"
+      "source": [
+        "### by Malte Jörg"
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "This Jupyter Notebook will be mainly used for the IBM Applied Data Science Capstone Project! "
-    },
-    {
-      "metadata": {
-        "trusted": true
-      },
-      "cell_type": "code",
-      "source": "import pandas as pd\nimport numpy as np",
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": true
-      },
-      "cell_type": "code",
-      "source": "print('Hello Capstone Project Course!')",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": "Hello Capstone Project Course!\n",
-          "name": "stdout"
-        }
+      "source": [
+        "This Jupyter Notebook will be mainly used for the IBM Applied Data Science Capstone Project! "
       ]
     },
     {
@@ -44,15 +26,35 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "",
-      "execution_count": null,
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": [
+        "print('Hello Capstone Project Course!')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Hello Capstone Project Course!\n"
+        }
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
+      "name": "python37764bit12dcdcbc9fc845228027e38f770bd047",
+      "display_name": "Python 3.7.7 64-bit",
       "language": "python"
     },
     "language_info": {
@@ -60,7 +62,7 @@
       "nbconvert_exporter": "python",
       "name": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.6",
+      "version": "3.7.7-final",
       "file_extension": ".py",
       "codemirror_mode": {
         "version": 3,
