finished data examination

--- a/jupyter/report_final_project.ipynb
+++ b/jupyter/report_final_project.ipynb
@@ -42,6 +42,38 @@
     "### Venue Category Data\n",
     "Foursquare privides a list of venue categories which consist of main categories and sub-categories. This list can be split into a dataset which contains a specific relation between all sub-categories to a main category. For example an 'Italian Restraunt' and a 'Chinese Restraunt' both can be set into the main category 'Food'."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 3. Methodology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 4. Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 5. Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 6. Conclusion"
+   ]
   }
  ],
  "metadata": {
